Closed
Bug 540252
Opened 16 years ago
Closed 16 years ago
WARNING: goofy tree selection state: two ranges are adjacent!: 'endFirstRange == startRange' with test_delete_multiple_messages_with_first_selected_message_open in test-deletion-with-multiple-displays.js
Categories
(MailNews Core :: Backend, defect)
MailNews Core
Backend
Tracking
(thunderbird3.0 .2-fixed)
RESOLVED
FIXED
Thunderbird 3.1b1
| Tracking | Status | |
|---|---|---|
| thunderbird3.0 | --- | .2-fixed |
People
(Reporter: rain1, Assigned: rain1)
Details
(Keywords: fixed-seamonkey2.0.4)
Attachments
(1 file)
|
1.08 KB,
patch
|
standard8
:
review+
standard8
:
superreview+
standard8
:
approval-thunderbird3.0.2+
|
Details | Diff | Splinter Review |
This should clearly be the other way round -- we need to warn if the first end index is equal to this start index, i.e. if endFirstRange == startRange, i.e. if endFirstRange != startRange is false.
This is a fix to a debug-only assertion, so I don't think it can be tested (apart from running the above-mentioned test in debug mode).
Attachment #422065 -
Flags: superreview?(bugzilla)
Attachment #422065 -
Flags: review?(bugzilla)
Comment 1•16 years ago
|
||
Comment on attachment 422065 [details] [diff] [review]
patch
Yep some things you just can't test (and I'd argue this isn't worth testing anyway).
Attachment #422065 -
Flags: superreview?(bugzilla)
Attachment #422065 -
Flags: superreview+
Attachment #422065 -
Flags: review?(bugzilla)
Attachment #422065 -
Flags: review+
| Assignee | ||
Comment 2•16 years ago
|
||
http://hg.mozilla.org/comm-central/rev/388ec73d6f39
I also fixed the indentation of the line below it.
Status: ASSIGNED → RESOLVED
Closed: 16 years ago
Resolution: --- → FIXED
Target Milestone: --- → Thunderbird 3.1b1
| Assignee | ||
Comment 3•16 years ago
|
||
Comment on attachment 422065 [details] [diff] [review]
patch
trivial npotdb fix.
Attachment #422065 -
Flags: approval-thunderbird3.0.2?
Updated•16 years ago
|
Attachment #422065 -
Flags: approval-thunderbird3.0.2? → approval-thunderbird3.0.2+
| Assignee | ||
Comment 4•16 years ago
|
||
status-thunderbird3.0:
--- → .2-fixed
Comment 5•16 years ago
|
||
Verified fixed for 1.9.1 by code inspection (and doesn't affect release builds).
Keywords: verified-thunderbird3.0
Updated•16 years ago
|
Keywords: fixed-seamonkey2.0.4
You need to log in
before you can comment on or make changes to this bug.
Description
•