Bug 540252 - WARNING: goofy tree selection state: two ranges are adjacent!: 'endFirstRange == startRange'. Fix flipped equality condition. r+sr=Standard8